--- a/index.html
+++ b/index.html
@@ -61,7 +61,36 @@ Pellentesque vitae lorem nunc. Mauris lobortis neque turpis. Duis vitae aliquet 
       </div>
     </div>
 </div>
+<div id="main-content" class="container">
+  <div id="home-tiles" class="row">
+      <div class="col-md-12 col-sm-12 col-xs-12">
+            
+            <p id="chickstory">
+          <h2>beef</h2>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nisi erat, posuere sed tempus vel, egestas quis ipsum. Quisque faucibus, massa id euismod aliquet, tortor mi tempus libero, in pulvinar nisi neque non enim. Praesent et magna nec risus consectetur interdum. Integer sollicitudin, massa eleifend lacinia viverra, sem mauris commodo urna, ac fringilla lacus lectus aliquet orci. Praesent imperdiet sed risus quis condimentum. Vestibulum lacus erat, dictum fringilla lacus vitae, porta viverra ligula. Mauris auctor, dolor at blandit finibus, quam neque lobortis massa, sed semper nisl diam sed erat. Fusce ullamcorper bibendum nunc, nec venenatis dui volutpat non. Nullam porta auctor urna quis suscipit.
 
+Nulla sed tortor massa. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque semper, massa at placerat consectetur, nisl tellus cursus odio, ut imperdiet ligula dolor a leo. Aenean rhoncus dapibus efficitur. Fusce nec commodo nulla, nec finibus massa. Ut a tristique elit. Vestibulum quis elit nibh. Morbi at quam id odio commodo bibendum. Vestibulum vitae sagittis quam, eu tristique ipsum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam quis nisi dapibus, fringilla dolor vel, vulputate sapien. Integer in enim scelerisque, condimentum nisi eget, pharetra elit.
+
+Pellentesque vitae lorem nunc. Mauris lobortis neque turpis. Duis vitae aliquet metus, in luctus mauris. Maecenas ac vestibulum justo. Maecenas sagittis nibh vel nibh sagittis dapibus. In blandit convallis porttitor. Ut justo nisi, sagittis vel lacus id, ullamcorper pretium elit. Sed mattis purus nec sagittis pharetra. Morbi non gravida sem. Curabitur imperdiet orci nec tempus porta. Suspendisse potenti. Ut tempus nisl molestie ante laoreet scelerisque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin ligula lorem, eleifend eget tellus nec, tincidunt euismod mauris. Duis a turpis orci. Nullam in tincidunt velit.
+            </p>
+      </div>
+    </div>
+</div>
+<div id="main-content" class="container">
+  <div id="home-tiles" class="row">
+      <div class="col-md-12 col-sm-12 col-xs-12">
+            
+            <p id="chickstory">
+          <h2>sushi</h2>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nisi erat, posuere sed tempus vel, egestas quis ipsum. Quisque faucibus, massa id euismod aliquet, tortor mi tempus libero, in pulvinar nisi neque non enim. Praesent et magna nec risus consectetur interdum. Integer sollicitudin, massa eleifend lacinia viverra, sem mauris commodo urna, ac fringilla lacus lectus aliquet orci. Praesent imperdiet sed risus quis condimentum. Vestibulum lacus erat, dictum fringilla lacus vitae, porta viverra ligula. Mauris auctor, dolor at blandit finibus, quam neque lobortis massa, sed semper nisl diam sed erat. Fusce ullamcorper bibendum nunc, nec venenatis dui volutpat non. Nullam porta auctor urna quis suscipit.
+
+Nulla sed tortor massa. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Pellentesque semper, massa at placerat consectetur, nisl tellus cursus odio, ut imperdiet ligula dolor a leo. Aenean rhoncus dapibus efficitur. Fusce nec commodo nulla, nec finibus massa. Ut a tristique elit. Vestibulum quis elit nibh. Morbi at quam id odio commodo bibendum. Vestibulum vitae sagittis quam, eu tristique ipsum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam quis nisi dapibus, fringilla dolor vel, vulputate sapien. Integer in enim scelerisque, condimentum nisi eget, pharetra elit.
+
+Pellentesque vitae lorem nunc. Mauris lobortis neque turpis. Duis vitae aliquet metus, in luctus mauris. Maecenas ac vestibulum justo. Maecenas sagittis nibh vel nibh sagittis dapibus. In blandit convallis porttitor. Ut justo nisi, sagittis vel lacus id, ullamcorper pretium elit. Sed mattis purus nec sagittis pharetra. Morbi non gravida sem. Curabitur imperdiet orci nec tempus porta. Suspendisse potenti. Ut tempus nisl molestie ante laoreet scelerisque. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin ligula lorem, eleifend eget tellus nec, tincidunt euismod mauris. Duis a turpis orci. Nullam in tincidunt velit.
+            </p>
+      </div>
+    </div>
+</div>
 </body>
 <style>
   *{
